# adventofcode-2022

./: .gitignore  README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  pyproject.toml  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py
inputs/: day05_input.txt
solutions/: day01.py
