[tool.poetry]
name = "adventofcode-2022"
version = "0.1.0"
description = "My solutions for Advent of Code 2022."
authors = ["Florian Holzner"]
readme = "README.md"
packages = [{include = "adventofcode_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
mypy = "^0.991"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"